[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
colored = "2.0.4"
fern = "0.6.2"
log.workspace = true
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
