[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 
[features]
default = []
panics = ["dep:log-panics"]

[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
hashbrown = "0.15.2"
log.workspace = true
log-panics = { version = "2.1.0", features = ["with-backtrace"], optional = true }
thiserror = "2.0.11"
