[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ggez = ["dep:ggez"]
serde = ["dep:serde"]
geo = ["dep:geo"]

[dependencies]
log.workspace = true
ggez = {version = "0.9.3", optional = true}
serde = { workspace = true, features = ["derive"], optional = true }
geo = { version = "0.29.3", optional = true }

