[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
triple_buffer = { git = "https://github.com/Bowarc/triple-buffer.git"}
threading = {path = "../threading"}
time = {path = "../time"}
spin_sleep = "1.1.1"
