[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0.10"
triple_buffer = { git = "https://github.com/Bowarc/triple-buffer.git"}
threading = {path = "../threading"}
time = {path = "../time"}
spin_sleep = "1.3.0"
