[package]
name = "random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]
bagU8 = []
bagU16 = []
bagU32 = []
bagU64 = []
bagU128 = []

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"], optional = true }
