[package]
name = "random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]
bag = ["dep:num-traits"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
log.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
num-traits = { version = "0.2.19", optional = true }
